--- a/src/main/resources/templates/greeting.mustache
+++ b/src/main/resources/templates/greeting.mustache
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<div>Hello, {{name}}</div>
+<div>Hello, name</div>
+<a href="/main">Main</a>
 </body>
 </html>
